--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <style>
+      body{
+        margin: 0;
+        font-family: 'Open Sans', sans-serif;
+      }
+
+      :root{
+        --main-color: #2248E2;
+        --white: #ffffff;  
+      }
+    </style>
   </head>
   <body>
     <noscript>
